--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,12 @@
 	"workbench.startupEditor": "none",
 	"git.confirmSync": false,
 	"editor.renderWhitespace": "all",
-
 	"stylelint.validate": [
 		"css",
 		"less",
 		"postcss",
 		"sass"
 	],
-
 	"path-autocomplete.pathMappings": {
 		"img": "${folder}/src/assets/img",
 		"../img": "${folder}/src/assets/img",
@@ -23,23 +21,20 @@
 		"@scripts": "${folder}/src/scripts",
 		"@templates": "${folder}/src/templates"
 	},
-
 	"terminal.integrated.defaultProfile.windows": "Git Bash",
 	"[jade]": {
 		"editor.defaultFormatter": "ducfilan.pug-formatter"
 	},
-
 	//JS & TS
 	"javascript.suggestionActions.enabled": false,
 	"typescript.suggestionActions.enabled": false,
 	"javascript.updateImportsOnFileMove.enabled": "always",
 	"typescript.updateImportsOnFileMove.enabled": "always",
-
 	"files.exclude": {
 		".babelrc": true,
 		".gitignore": false,
 		".idea": true,
-		"dist": false,
+		"docs": false,
 		"node_modules/": false,
 		"package-lock.json": false
 	},
@@ -49,8 +44,9 @@
 	"javascript.preferences.quoteStyle": "double",
 	"typescript.preferences.quoteStyle": "double",
 	"javascript.format.semicolons": "remove",
-
 	"cssvar.postcssSyntax": {
-		"postcss-sass": ["sass"]
+		"postcss-sass": [
+			"sass"
+		]
 	}
 }
